--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "locomotive-scroll": "^4.1.4",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-chrono": "^1.22.0",
     "react-dom": "18.2.0",
     "react-scroll-motion": "^0.3.2"
   }
