--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "13.0.6",
     "locomotive-scroll": "^4.1.4",
     "next": "13.0.6",
+    "next-seo": "^6.1.0",
     "react": "18.2.0",
     "react-chrono": "^1.22.0",
     "react-dom": "18.2.0",
