--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "locomotive-scroll": "^4.1.4",
-    "next": "13.0.6",
+    "next": "^13.5.6",
     "next-seo": "^6.1.0",
     "react": "18.2.0",
     "react-chrono": "^1.22.0",
     "react-dom": "18.2.0",
-    "react-scroll-motion": "^0.3.2"
+    "react-markdown": "^9.0.0",
+    "react-scroll-motion": "^0.3.2",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   }
 }
